# evo-flywheel

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  coverage.json  pyproject.toml  start.sh
config/: sources.yaml
docs/: PRD.md  ROADMAP.md  academic-flywheel-research.md  api.md  multi-agent-arena.md  open-source-research.md  rss.md
src/evo_flywheel/: __init__.py  config.py  error_handlers.py  logging.py
src/evo_flywheel/analyzers/: batch.py  llm.py  prompts.py
src/evo_flywheel/api/: converters.py  deps.py  main.py  schemas.py
src/evo_flywheel/api/v1/: analysis.py  collection.py  embeddings.py  feedback.py  flywheel.py  papers.py  reports.py  search.py  stats.py
src/evo_flywheel/collectors/: biorxiv.py  dedup.py  orchestrator.py  rss.py
src/evo_flywheel/db/: __init__.py  context.py  crud.py  init.py  models.py
src/evo_flywheel/reporters/: deep_generator.py  generator.py
src/evo_flywheel/scheduler/: __init__.py  analysis.py  jobs.py
src/evo_flywheel/vector/: __init__.py  client.py  embeddings.py  hybrid.py  search.py  storage.py
src/evo_flywheel/web/: __init__.py  api_client.py  app.py
src/evo_flywheel/web/pages/: __init__.py  home.py  list.py  report.py  search.py
src/evo_flywheel/web/views/: __init__.py  detail.py  flywheel.py  home.py  list.py  report.py  search.py
tests/: __init__.py  conftest.py
tests/api/: conftest.py  test_analysis.py  test_collection.py  test_feedback.py  test_main.py  test_papers.py  test_reports.py  test_search.py  test_stats.py
tests/e2e/: __init__.py  conftest.py  test_web_e2e.py
tests/factories/: __init__.py  paper_factory.py
tests/integration/: test_analyzers_integration.py  test_vector_search.py
tests/unit/: test_analysis.py  test_api_converters.py  test_biorxiv.py  test_collector_orchestrator.py  test_config.py  test_config_api.py  test_db_context.py  test_db_crud.py  test_db_crud_date_queries.py  test_db_models.py  test_dedup.py  test_deep_generator.py  test_error_handler.py  test_logging.py  test_reporters_models.py  test_rss_collector.py  test_scheduler.py  test_vector_client.py
tests/unit/test_analyzers/: test_batch.py  test_llm.py  test_prompts.py
tests/unit/test_api/: conftest.py  test_flywheel.py
tests/unit/test_vector/: test_embeddings.py  test_hybrid.py  test_search.py  test_storage.py
tests/unit/test_web/: test_api_client.py  test_detail.py  test_home.py  test_home_admin.py  test_list.py  test_report.py  test_search.py
