[project]
name = "evo-flywheel"
version = "0.1.0"
description = "进化生物学学术飞轮 - AI 驱动的文献分析与报告系统"
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}
authors = [
    {name = "gqy20", email = "gqy20@example.com"}
]
keywords = ["evolutionary-biology", "literature-analysis", "llm", "semantic-search"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

dependencies = [
    # Web 框架
    "fastapi>=0.115.0",
    "streamlit>=1.40.0",
    "uvicorn[standard]>=0.32.0",

    # 数据库
    "sqlalchemy>=2.0.36",
    "chromadb>=0.6.0",

    # 数据采集
    "feedparser>=6.0.11",
    "requests>=2.32.0",
    "beautifulsoup4>=4.12.0",

    # LLM
    "zhipuai>=2.1.0",

    # Embedding API (远程服务，无需本地模型)
    # 使用 OpenAI embeddings 或其他远程 API

    # 调度
    "apscheduler>=3.11.0",

    # 工具库
    "python-dotenv>=1.0.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "httpx>=0.28.0",
]

[project.optional-dependencies]
dev = [
    # 测试
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "pytest-asyncio>=0.24.0",

    # 代码质量
    "ruff>=0.9.0",
    "mypy>=1.14.0",
    "pre-commit>=4.0.0",

    # 类型检查
    "types-requests",
    "types-PyYAML",
]

[project.urls]
Homepage = "https://github.com/gqy20/evo-flywheel"
Repository = "https://github.com/gqy20/evo-flywheel"
Issues = "https://github.com/gqy20/evo-flywheel/issues"

[project.scripts]
evo-fetch = "src.evo_flywheel.scheduler.jobs:main"
evo-init = "src.evo_flywheel.db.init:main"

# Build system
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/evo_flywheel"]

# Ruff 配置
[tool.ruff]
target-version = "py313"
line-length = 100
indent-width = 4

[tool.ruff.lint]
# 启用的规则
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
]

# 忽略的规则
ignore = [
    "E501",  # 行过长 (由 formatter 处理)
    "B008",  # 函数调用作为默认参数 (FastAPI 需要)
    "B904",  # raise without from (在异步代码中)
    "ARG001",  # unused arguments (在 fixtures 中)
]

# 允许自动修复的规则
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ARG", "S101"]  # 测试文件允许 unused arguments 和 assert
"__init__.py" = ["F401"]  # __init__.py 允许未使用的导入

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# Pytest 配置
[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
    "-ra",           # 显示测试摘要
    "-q",            # 简化输出
    "--strict-markers",  # 严格标记
    "--cov=src/evo_flywheel",  # 覆盖率
    "--cov-report=term-missing",  # 覆盖率报告
    "--cov-report=html",  # HTML 覆盖率报告
]
markers = [
    "unit: 单元测试",
    "integration: 集成测试",
    "e2e: 端到端测试",
    "slow: 慢速测试",
]

# Coverage 配置
[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__init__.py",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

# MyPy 配置
[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "evo_flywheel.db.models"
ignore_errors = true

[[tool.mypy.overrides]]
module = "evo_flywheel.db.crud"
ignore_errors = true

[[tool.mypy.overrides]]
module = "evo_flywheel.vector.client"
ignore_errors = true

[[tool.mypy.overrides]]
module = "evo_flywheel.collectors.rss"
ignore_errors = true

[[tool.mypy.overrides]]
module = "evo_flywheel.collectors.biorxiv"
ignore_errors = true

[[tool.mypy.overrides]]
module = "evo_flywheel.collectors.dedup"
ignore_errors = true

[[tool.mypy.overrides]]
module = "evo_flywheel.collectors.orchestrator"
ignore_errors = true

[[tool.mypy.overrides]]
module = "evo_flywheel.scheduler.jobs"
ignore_errors = true

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101"]  # 允许 assert 用于测试
